<resources>
    <string name="app_name">Mobil ECG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_arxiv">Arxiv</string>
    <string name="menu_patsiyentlar">Ro`yxatga olish</string>
    <string name="menu_programmaHaqida">Miokard Infarkti haqida</string>
    <string name="menu_chiqish">Chiqish</string>
    <string name="menu_sozlamalar">Sozlamalar</string>
    <string name="menu_yoriqnoma">Asosiy</string>
    <string name="menu_tashxis">Tashxis</string>
    <string name="patsiyentlar">Patsiyentlar</string>
    <string name="arxiv">Arxiv</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="link_to_website">www.scichart.com</string>
    <string name="hello_world">Hello world!</string>
    <string name="default_title">Examples</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="reset">RESET</string>
    <string name="clear">Clear</string>
    <string name="autorange">AutoRange</string>
    <string name="add_series">Add Series</string>
    <string name="remove_series">Remove Series</string>
    <string name="apply_range">Apply</string>
    <string name="exception_clipboard_message">Exception message is copied to the clipboard</string>
    <string name="exception_stack_trace">Exception stack trace</string>
    <string name="exception_has_occurred">An exception has occurred!</string>
    <string name="send_an_email">send an email</string>
    <string name="copy_to_clipboard">copy to clipboard</string>
    <string name="enable_performance_overlay">Enable performance overlay</string>
    <string name="speed_text">Speed (ms) :</string>
    <string name="no_results_found">It\'s looking lonely in here&#x2026; Have you tried searching for something simpler? e.g. \"Realtime Charts\"</string>
    <string-array name="sort_by">
        <item>Category</item>
        <item>Feature</item>
        <item>Name</item>
        <item>Most Used</item>
    </string-array>
    <string-array name="style_list">
        <item>BlackSteel</item>
        <item>BrightSpark</item>
        <item>Chrome</item>
        <item>Electric</item>
        <item>ExpressionDark</item>
        <item>ExpressionLight</item>
        <item>Oscilloscope</item>
        <item>SciChartv4Dark</item>
        <item>BerryBlue</item>
    </string-array>
    <string-array name="series_list">
        <item>COLUMN</item>
        <item>LINE</item>
        <item>SPLINE_LINE</item>
        <item>IMPULSE</item>
        <item>MOUNTAIN</item>
        <item>XY_SCATTER</item>
        <item>ERROR_BARS</item>
        <item>FIXED_ERROR_BARS</item>
        <item>BUBBLE</item>
        <item>BAND</item>
        <item>OHLC</item>
        <item>CANDLESTICK</item>
        <item>STACKED_COLUMN</item>
        <item>STACKED_MOUNTAIN</item>
        <item>SPLINE_BAND</item>
    </string-array>
    <string name="theme">Theme:</string>
    <string-array name="fill_list">
        <item>Solid color</item>
        <item>Linear gradient</item>
        <item>Radial gradient</item>
        <item>Texture</item>
    </string-array>
    <string-array name="texture_mapping_mode_list">
        <item>Per Screen</item>
        <item>Per Primitive</item>
    </string-array>
    <string name="legend_orientation">Legend orientation:</string>
    <string-array name="annotation_type_list">
        <item>BoxAnnotation</item>
        <item>LineAnnotation</item>
        <item>LineArrowAnnotation</item>
        <item>AxisMarkerAnnotation</item>
        <item>CustomAnnotation</item>
        <item>TextAnnotation</item>
        <item>HorizontalLineAnnotation</item>
        <item>VerticalLineAnnotation</item>
    </string-array>
    <string name="legend_source">Data source:</string>
    <string name="show_legend">Show legend</string>
    <string name="show_checkboxes">Show checkboxes</string>
    <string name="show_series_markers">Show series markers</string>
    <string name="ecg_start">START</string>
    <string name="ecg_stop">STOP</string>
    <string name="append_10K_points">+10K</string>
    <string name="append_100K_points">+100K</string>
    <string name="append_MLN_points">+1MLN</string>
    <string name="add_points_reset">Clear</string>
    <string-array name="resampling_mode">
        <item>None</item>
        <item>MinMax</item>
        <item>Mid</item>
        <item>Min</item>
        <item>Max</item>
        <item>Auto</item>
    </string-array>
    <string name="stroke">Stroke: </string>
    <string-array name="points">
        <item>1k points p/s</item>
        <item>10k points p/s</item>
        <item>100k points p/s</item>
    </string-array>
    <string-array name="series_types">
        <item>FastLineRenderableSeries</item>
        <item>FastMountainRenderableSeries</item>
        <item>XyScatterRenderableSeries</item>
    </string-array>
    <string name="series_type">Series type: </string>
    <string name="speed">Speed: </string>
    <string name="resampling">Resampling: </string>
    <string name="cursor_modifier">Enable Cursor</string>
    <string name="pan_modifier">Pan modifier</string>
    <string name="zoom_modifier">Enable Zoom/Pan</string>
    <string name="show_tooltips">Show tooltips</string>
    <string name="show_axis_labels">Show axis labels</string>
    <string name="draw_vertical_line">Draw vertical line</string>
    <string name="data_source">Data source: </string>
    <string name="is_step_line">Is step line</string>
    <string name="use_log_on">Use Logarithmic on: </string>
    <string name="use_log_on_x_axis">X-Axis</string>
    <string name="use_log_on_y_axis">Y-Axis</string>
    <string name="log_base">Logarithmic Base</string>
    <string-array name="log_base_modes">
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>E</item>
    </string-array>
    <string name="axis_drag_mode">Axis drag mode: </string>
    <string name="direction">Direction: </string>
    <string-array name="palette_mode_list">
        <item>Radial</item>
        <item>Axial</item>
        <item>Azimuthal</item>
        <item>Polar</item>
    </string-array>
    <string name="stroke_color_palette">Stroke</string>
    <string name="fill_color_palette">Fill</string>
    <string name="show_point_markers">Show Point Markers</string>
    <string name="is_volumetric">Is Volumetric</string>
    <string-array name="stroke_color_palette_list">
        <item>Gradient Stroke Y</item>
        <item>Gradient Stroke Z</item>
        <item>Solid Fill Color (Green)</item>
        <item>None</item>
    </string-array>
    <string-array name="fill_color_palette_list">
        <item>Gradient Fill YAxis</item>
        <item>Gradient Fill ZAxis</item>
        <item>Solid Color Fill (Blue)</item>
        <item>None</item>
    </string-array>
    <string name="show_fps_counter">Show FPS Counter</string>
    <string name="horizontal">Horizontal Chart</string>
    <string name="vertical">Vertical Chart</string>
    <string-array name="render_surface_types">
        <item>Canvas RenderSurface</item>
        <item>OpenGL RenderSurface</item>
        <item>Texture RenderSurface</item>
    </string-array>
    <string-array name="overlay_types">
        <item>None</item>
        <item>FPS counter</item>
        <item>Performance overlay</item>
    </string-array>
    <string name="use_animation">Use Animation</string>
    <string name="z_scale">Change Z-Scale</string>
    <string name="zoom_extents_y_axis">Zoom Extents Y-Axis</string>
    <string name="zoom_x_axis_only">Zoom X-Axis Only</string>
    <string name="export_solution_text">Thank you for exporting the SciChart Android %s Example, please check out the attached project which you can run in Android studio.\n\nFor help, please see https://www.scichart.com/licensing-scichart-android</string>
    <string name="hit_test_result">HitTest Result:</string>
    <string name="thresholdValueText">Threshold value:</string>
    <string name="title_activity_example">ExampleActivity</string>
    <string name="toggle_drawer">Toggle Drawer</string>
    <string name="scichart_android_examples">SciChart Android examples</string>
    <string name="show_code">Show code</string>
    <string name="export_project">Export project</string>
    <string name="export_option">Select export option for %s example:</string>
    <string name="export_example">Exporting example�</string>
    <string name="export_all_examples">Exporting all examples�</string>
    <string name="toolbar_drawer_open">Open the toolbar</string>
    <string name="toolbar_drawer_close">Close the toolbar</string>
    <string name="change_error_bars_data_point_width">Change ErrorBars dataPointWidth</string>
    <string name="change_error_bars_stroke_thickness">Change ErrorBars strokeThickness</string>
    <string name="rollover">ROLLOVER</string>
    <string name="cursor">CURSOR</string>
    <string name="tooltip">TOOLTIP</string>
    <string name="annotation_type">Annotation type</string>
    <string name="delete_annotation">DEL</string>
    <string name="select_renderable_series">Select Renderable Series</string>
    <string name="palette_mode">Palette Mode</string>
    <string name="rotate_vertical">Rotate Vertical</string>
    <string name="rotate_horizontal">Rotate Horizontal</string>
    <string name="pitch">Pitch</string>
    <string name="yaw">Yaw</string>
    <string name="radius">Radius</string>
    <string name="fov">FOV</string>
    <string name="orthowidth">OrthoWidth</string>
    <string name="orthoheight">OrthoHeight</string>
    <string name="lhs">LHS</string>
    <string name="rhs">RHS</string>
    <string name="perspective">Perspective</string>
    <string name="orthogonal">Orthogonal</string>
    <string name="modifier_helper_tips">To rotate chart use scroll with two fingers</string>
    <string name="featured">FEATURED CHARTS</string>
    <string name="featured_description">SELECTION OF FEATURED CHARTS</string>
    <string name="charts2D">2D CHARTS</string>
    <string name="charts2D_description">SELECTION OF 2D CHARTS</string>
    <string name="charts3D">3D CHARTS</string>
    <string name="charts3D_description">SELECTION OF 3D CHARTS</string>
    <string name="ecg">ECG</string>
    <string name="heartRateInfo">V1- 1.4MM \nST |+ 0.6 ||+ 0.9</string>
    <string name="nibp">NIBP</string>
    <string name="nibpInfo">AUTO\n145/95</string>
    <string name="sv">SV</string>
    <string name="svInfo">ML\t\t100\n%*****\t55</string>
    <string name="spo2">SPO<small><small><small><sub>2</sub></small></small></small></string>
    <string name="spoInfo">71-\nRESP</string>
    <string name="heart_icon_description">heart icon</string>
    <string name="maininfo">Ushbu dastur yurak faoliyatini real-vaqt rejimida monitor qilish imkoniyatini beradi. Ushbu dastur 12 kanalli EKG tasvirlarini real vaqt rejimida ko\'rish va ular asosida birlamchi Miokard Infarktiga tashxis qo\'yish imkoniyatini beradi. Dasturdan foydalanish uchun ADS1298 ECG qurilmasini Bluetooth orqali telefonga ulash talab etiladi. Agar siz yurak faoliyatingizni tekshirmoqchi bo\'lsangiz, qurilma sensorlarini tanangizga ulang va quyidagi tugmani bosib telefonda blutoothni yoqish orqali ECG qurilmasini telefonga ulang</string>
</resources>